--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
       <h2 class="bookers">Bookers</h2>
       <ul class="ul-top">
         <% if user_signed_in? %>
-          <li><%= link_to "Home", user_path(current_user.id) , class: "glyphicon glyphicon-home user_#{current_user.id}" %>
+          <li><%= link_to "Home", user_path(current_user.id) , class: "glyphicon glyphicon-home home" %>
           </li>
           <li><%= link_to "Users", users_path(current_user.id) , class: "glyphicon glyphicon-user users" %>
           </li>
