--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,7 +12,7 @@
 		
 		<label><%= f.attachment_field :profile_image, class: "use_image" %></label><br>
 		<label>Introduction</label><br>
-		<%= f.text_area :comment, class: "introdution width clear_fix" %><br>
+		<%= f.text_area :comment, class: "introduction width clear_fix" %><br>
 		<%= f.submit "Update User", class: "btn btn-primary width"%><br>
 		<%end%>
 	</div>
